k8s/smarthome/overlays/zigbee2mqtt/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zigbee2mqtt
    spec:
      containers:
        - name: app
          securityContext:
            privileged: true
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: persistence
              mountPath: /app/data
              subPath: zigbee2mqtt
            - name: usb
              mountPath: /dev/ttyUSB0
            - name: udev
              mountPath: /run/udev
        - name: zigbee2mqtt-exporter
          image: ghcr.io/d0ugal/zigbee2mqtt-exporter:latest@sha256:e3e65f2cb52141da2b3bc02009d18007fd1cee4d8371f0f96229ba47edcbd639
          ports:
            - name: metrics
              containerPort: 8087
      volumes:
        - name: usb
          hostPath:
            path: /dev/ttyUSB0
        - name: udev
          hostPath:
            path: /run/udev
