k8s/smarthome/overlays/zigbee2mqtt/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  annotations:
    metallb.universe.tf/allow-shared-ip: smarthome
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.100.251
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
    - name: metrics
      port: 8087
      protocol: TCP
      targetPort: metrics
