k8s/smarthome/overlays/zigbee2mqtt/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
    - hosts:
        - z2m.k8s.javydekoning.com
      secretName: javydekoning-com-tls
  rules:
    - host: z2m.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt-service
                port:
                  name: http
